@@ -10,12 +10,14 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 @RequiredArgsConstructor
@@ -41,30 +43,45 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
         try {
             username = jwtUtil.extractUsername(jwtToken);
-        } catch (Exception e) {
-            filterChain.doFilter(request, response);
-            return;
-        }
 
-        if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+            if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+                if (jwtUtil.validateToken(jwtToken)) {
+                    // Token එකෙන් එන Role එක කෙලින්ම ගන්න (උදා: "ADMIN")
+                    String rawRole = jwtUtil.extractRole(jwtToken);
 
-            Auth auth = authRepo.findByUsername(username).orElse(null);
+                    Auth auth = authRepo.findByUsername(username)
+                            .or(() -> authRepo.findByEmail(username))
+                            .orElse(null);
 
-            if (auth != null && jwtUtil.validateToken(jwtToken)) {
+                    if (auth != null && rawRole != null) {
+                        // 🎯 [CHANGE]: ROLE_ prefix එක එකතු නොකර පිරිසිදුව ලබා දීම
+                        String formattedRole = rawRole.toUpperCase().trim();
+                        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(formattedRole);
 
-                UsernamePasswordAuthenticationToken authenticationToken =
-                        new UsernamePasswordAuthenticationToken(
-                                auth.getUsername(),
-                                null,
-                                List.of(new SimpleGrantedAuthority("ROLE_" + auth.getRole()))
+                        UserDetails userDetails = User.builder()
+                                .username(auth.getUsername())
+                                .password(auth.getPassword() != null ? auth.getPassword() : "")
+                                .authorities(Collections.singletonList(authority))
+                                .build();
+
+                        UsernamePasswordAuthenticationToken authenticationToken =
+                                new UsernamePasswordAuthenticationToken(
+                                        userDetails,
+                                        null,
+                                        userDetails.getAuthorities()
+                                );
+
+                        authenticationToken.setDetails(
+                                new WebAuthenticationDetailsSource().buildDetails(request)
                         );
 
-                authenticationToken.setDetails(
-                        new WebAuthenticationDetailsSource().buildDetails(request)
-                );
-
-                SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+                        SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+                        System.out.println("✅ [JWT FILTER] Authenticated: " + username + " | Authority: " + formattedRole);
+                    }
+                }
             }
+        } catch (Exception e) {
+            System.out.println("❌ [JWT FILTER ERROR]: " + e.getMessage());
         }
 
         filterChain.doFilter(request, response);
